@@ -762,6 +762,9 @@ Release 0.18.0 - Unreleased
     HADOOP-3670. Fixes JobTracker to clear out split bytes when no longer 
     required. (Amareshwari Sriramadasu via ddas)
 
+    HADOOP-3743. Fix -libjars, -files, -archives options to work even if
+    user code does not implement tools. (Amareshwari Sriramadasu via mahadev)
+
 Release 0.17.2 - Unreleased
 
   BUG FIXES
